--- a/rylanwe/记录.md
+++ b/rylanwe/记录.md
@@ -4,3 +4,10 @@
 2. 算法：dfs（全排列、八皇后） 和 bfs（迷宫）基础，树和图的存储（邻接表——多个单链表），树可以看成无环的图，无向图可以看成双向箭头，所以只需要学会存无向图就行
 3. 回忆并梳理一个月前的项目的思路（太能鸽了
 4. 读《深入解析 css》,复习层叠、优先级、继承的基础知识
+   
+## 6月27
+1. JavaScript：ES6 函数扩展，主要是箭头函数的一些注意事项，还有 rest 参数
+2. 学习 notion 的使用，将博客和笔记迁移到 notion，整理分类
+3. 算法题：一道模拟
+
+（今天太摸了
