--- a/rylanwe/记录.md
+++ b/rylanwe/记录.md
@@ -5,9 +5,13 @@
 3. 回忆并梳理一个月前的项目的思路（太能鸽了
 4. 读《深入解析 css》,复习层叠、优先级、继承的基础知识
    
-## 6月27
+## 6月27日
 1. JavaScript：ES6 函数扩展，主要是箭头函数的一些注意事项，还有 rest 参数
 2. 学习 notion 的使用，将博客和笔记迁移到 notion，整理分类
 3. 算法题：一道模拟
 
 （今天太摸了
+
+## 6月28日
+1. Vue 组件化开发，生命周期，props
+2. 深入解析 CSS 第二章
